--- a/.gitignore
+++ b/.gitignore
@@ -103,10 +103,10 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+# custom
 .idea
-/models
+agent_code/big_bertha_v1/models
 screenshots/*.png
 screenshots/*.mp4
 screenshots/*.webm
-
 replays/
